# rust_cli_quickstart

./: Cargo.toml  README.md  README.template.md  customize.rs  customize.ts  deno.json  version.json5
.zed/: debug.json
benches/: benchmarks.rs
src/: lib.rs
