[package]
name = "rust_cli_quickstart"
version = "0.0.0"
edition = "2021"
authors = ["{{firstName}} {{lastName}} <{{email}}>"]
description = "{{description}}"
repository = "https://github.com/{{alias}}/rust_cli_quickstart"
readme = "README.md"
keywords = []
categories = []
license = "Unlicense"

[dependencies]
clap = { version = "4.4.6", features = ["derive", "env"] }
easy-error = "1.0.0"
lazy_static = "1.4.0"
yansi = "0.5.1"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "rust-cli-quickstart"
path = "src/bin/rust_cli_quickstart.rs"
