[package]
name = "rust_cli_quickstart"
version = "0.0.0"
edition = "2021"
authors = ["{{firstName}} {{lastName}} <{{email}}>"]
description = "{{description}}"
repository = "https://github.com/{{alias}}/rust_cli_quickstart"
readme = "README.md"
keywords = []
categories = []
license = "Unlicense"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive", "env"] }
lazy_static = "1.5"
termion = "4.0.5"
thiserror = "2.0"

[dev-dependencies]
criterion = "^0.5"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "rust-cli-quickstart"
path = "src/bin/rust_cli_quickstart.rs"
